# maf-contact-centre

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
data/: eval_dataset_v1.jsonl  eval_dataset_v1_ready.jsonl  eval_results_v1.json  eval_results_v1_20-03-2026.json  eval_results_v1_23-03-2026-test1.json  eval_results_v1_23-03-2026-test3.json  eval_results_v1_23-03-2026-test4.json  eval_results_v1_24-03-2026-test1.json  eval_results_v1_24-03-2026-test2.json  eval_results_v1_24-03-2026-test3.json  manual_test_cases_v1.json  manual_test_cases_v2.json
data/notes/: failure-taxonomy-report-23-03-26.md  failure-taxonomy-report-24-03-26.md
docs/: architecture.md  infrastructure.md  scope-v1.md
docs/notes/: day01.md  day02.md  day03.md  day04.md  day05-priorities.md  day05.md
docs/plans/: azure-ai-foundry-provisioning.md  manual-multiturn-runner.md
infra/: .gitignore  .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: manual_multiturn_runner.py  run_devui.py  run_eval.py  run_manual_tests.py
src/: __init__.py  devui.py
src/agents/: billing.py  (+3 more)
tests/: test_agents_common.py  test_billing_tools.py  test_devui.py  test_handoff_workflow.py  test_main.py  test_manual_multiturn_runner.py  test_patches.py  test_receptionist_agent.py  test_receptionist_tools.py  test_run_eval.py  test_specialist_agents.py  test_support_tools.py  test_tools_init.py
(+21 files in other folders)
